force-app/main/default/objects/Product_Operation__c/Product_Operation__c.object-meta.xml
<CustomObject>
    <label>Product Operation</label>
    <nameField>
        <label>Product Operation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>