force-app/main/default/objects/Product_Operation__c/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>