force-app/main/default/objects/Product_Operation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Operations</relationshipLabel>
    <relationshipName>Product_Operations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>